--- a/homepage.css
+++ b/homepage.css
@@ -1,8 +1,12 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: calibri;
+    font-family: "DM Sans", calibri;
 }
+
+/*
+font-family: "VT303"
+*/
 
 :root {
     --white1: #e3e3e3;
