--- a/homepage.css
+++ b/homepage.css
@@ -82,11 +82,29 @@ font-family: "VT323"
     left: 0;
 }
 
+@media only screen and (min-width: 600px){
+    #sidediv {
+        width: 40%;
+    }
+
+    #dummydiv {
+        width: 60%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    #sidediv {
+        width: 70%;
+    }
+    
+    #dummydiv {
+        width: 30%;
+    }
+}
+
 #sidediv {
-    margin: 0 0 0 -50vw;
+    margin: 0 0 0 -100vw;
     transition: .6s all;
-    width: 50vw;
-    max-width: 400px;
     height: 100vh;
     background-color: var(--dark1);
     display: none;
@@ -94,7 +112,6 @@ font-family: "VT323"
 
 #dummydiv {
     height: 100vh;
-    width: 100%;
 }
 
 #mainHold {
