--- a/homepage.css
+++ b/homepage.css
@@ -21,6 +21,9 @@ font-family: "VT323"
     --dark2: #a7a7a7;
     --dark3: #161616;
     --dark4: #292929;
+
+    --circle0: #9e9e9e;
+    --circle1: #00ff37;
 }
 
 ::-webkit-scrollbar {
@@ -45,6 +48,67 @@ font-family: "VT323"
 #botnav1 {
     bottom: 0;
     z-index: 1;
+    display: flex;
+}
+
+#modeList {
+    width: 80%;
+    margin: 0 10px 0 0;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+#modeList section {
+    display: inline-block;
+    margin: 6px;
+    padding: 10px;
+    background-color: var(--dark4);
+    border-radius: 2px;
+}
+
+#modeList svg {
+    margin: 0 -2px -4px 2px;
+}
+
+#modeBtnHold button {
+    width: 100%;
+    padding: 10px;
+    color: var(--white1);
+    background-color: var(--dark4);
+    margin: 7px 0 0 0;
+}
+
+#modeBtnHold {
+    width: 20%;
+}
+
+#modeDetails {
+    z-index: 4;
+    padding: 20px;
+    backdrop-filter: blur(4px);
+}
+
+#closeDiv1 {
+    float: right;
+    margin: -30px 0 0 0;
+    padding: 10px;
+}
+
+#detailsHold {
+    max-width: 500px;
+    margin: 100px auto;
+    padding: 20px;
+    background-color: var(--dark1);
+    border-radius: 4px;
+    z-index: 6;
+}
+
+.fixedDiv {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 #topnav1, #botnav1 {
@@ -73,13 +137,8 @@ font-family: "VT323"
 
 #sidenav {
     z-index: 2;
-    position: fixed;
-    backdrop-filter: blur(4px);
     display: flex;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    backdrop-filter: blur(4px);
 }
 
 @media only screen and (min-width: 600px){
@@ -170,9 +229,19 @@ input::placeholder {
 }
 
 #btnHold {
-    display: flex;
     max-width: 500px;
     margin: 0 auto;
+}
+
+#detailsBtn button {
+    padding: 10px 30px;
+    color: var(--white1);
+    font-size: 16px;
+    background-color: var(--dark4);
+}
+
+.flex {
+    display: flex;
     justify-content: space-around;
 }
 
@@ -181,14 +250,22 @@ input::placeholder {
     margin: 0 10px;
 }
 
-#webList {
+#webList, #webList2 {
     text-align: left;
     font-size: 16px;
     padding: 20px;
-    background-color: var(--dark1);
-    border-radius: 4px;
+    border-radius: 2px;
     max-width: 460px;
     margin: 20px auto;
+}
+
+#webList {
+    background-color: var(--dark1);
+}
+
+#webList2 {
+    background-color: var(--dark4);
+    font-family: "VT323";
 }
 
 #webList span {
