--- a/files/tools.css
+++ b/files/tools.css
@@ -9,15 +9,18 @@ body {
 * {
     transition: .6s background-color;
     -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 :root {
-    --white1: #fff;
-    --white2: #e3e3e3;
-    --dark1: #0a0908;
+    --white1: #f8f9fa;
+    --white2: #e9ecef;
+    --dark1: #212529;
     --dark2: #a7a7a7;
-    --dark3: #1f1f1f;
-    --dark4: #292929;
+    --dark3: #343a40;
+    --dark4: #495057;
 
     --circle0: #9e9e9e;
     --circle1: #00ff37;
@@ -88,6 +91,11 @@ body {
     background-color: transparent;
     border: 2px solid var(--green1);
     box-shadow: 10px 10px 60px var(--green2);
+}
+
+.transbtn:hover {
+    background-color: var(--white2);
+    color: var(--dark1);
 }
 
 .redbtn:hover {
@@ -229,7 +237,7 @@ input, button {
     border-radius: 4px;
 }
 
-button {
+button, svg {
     cursor: pointer;
 }
 
