Minor color and text fix

--- a/files/tools.css
+++ b/files/tools.css
@@ -29,8 +29,10 @@ body {
     --transP1: #ededed30;
 
     --red1: #ff1414;
+    --red2: #ff141430;
     --blue1: #0f4bff;
     --green1: #32CD32;
+    --green2: #32CD3230;
     --yellow1: #ffee00;
 }
 
